# archie

./: .envrc.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: db.py  ingest.py  main.py  mcp_server.py  ocr.py  reviewer.py  utils.py
app/agents/: __init__.py  evaluator.py  parser.py  retriever.py  synthesizer.py
app/mcp/: memory_tools.py
app/memory/: db_setup.py  embeddings.py  search.py
app/models/: memory.py
